--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styling.css">
     <title>Methods for Adding CSS</title>
+    <style>.styled-paragraph {
+      color: white; 
+      background-color: green; 
+      font: size 18px;
+      } 
+      </style>
   </head>
   <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <div> Style me via the external method!</div>
+    <p class="styled-paragraph">  I would like to be styled with the internal method, please.<p>
+    <button style="color: black; background-color: orange;">
+      Method
+    </button>
   </body>
 </html>
