--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styling.css">
     <title>Methods for Adding CSS</title>
-    <style>.styled-paragraph {
-      color: white; 
-      background-color: green; 
-      font: size 18px;
+    <style>
+      p {
+        color: white; 
+        background-color: green; 
+        font: size 18px;
       } 
       </style>
   </head>
   <body>
     <div> Style me via the external method!</div>
-    <p class="styled-paragraph">  I would like to be styled with the internal method, please.<p>
-    <button style="color: black; background-color: orange;">
-      Method
-    </button>
+    <p>  I would like to be styled with the internal method, please.</p>
+    <button style="color: black; background-color: orange;">Inline Method</button>
   </body>
 </html>
