--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <p class ="uneven">Number 1 - I'm a class!</p>
-    <div class="second-element">Number 2 - I'm one ID.</div>
+    <div id="second-element">Number 2 - I'm one ID.</div>
     <p class ="uneven font">Number 3 - I'm a class, but cooler!</p>
-    <div class="fourth-element">Number 4 - I'm another ID.</div>
+    <div id="fourth-element">Number 4 - I'm another ID.</div>
     <p class="uneven">Number 5 - I'm a class!</p>
   </body>
 </html>
